SERVER-40546 max/min boundary checking on both